# Orion

./: .env.example  .gitignore  Readme.md  _debug_join.py  code_pr.orx  orion_cli.py  setup.py  test_ai.orx  test_io_out.txt  test_llm.orx  test_log.orx  test_log.txt  test_middleware.orx  test_priority.orbc  test_priority.orx  test_server.orx  test_vdb.json
compiler/: bytecode_compiler.py
orion-vm/: .gitignore  Cargo.toml  _err.orx  _lex.orx  _ok.orx
orion-vm/fuzz/: Cargo.toml
orion-vm/fuzz/fuzz_targets/: fuzz_full_pipeline.rs  fuzz_lexer.rs  fuzz_parser.rs
orion-vm/src/: ai.rs  aot.rs  ast.rs  builtins.rs  bytecode.rs  codegen.rs  dap.rs  debugger.rs  env.rs  error.rs  eval.rs  eval_value.rs  gc.rs  instruction.rs  lexer.rs  lib.rs  main.rs  parser.rs  pkg.rs  stdlib_bridge.rs  token.rs  typechecker.rs  value.rs  vm.rs
orion-vm/src/cli/: banner.rs  bench.rs  build_native.rs  check.rs  debug.rs  docs.rs  doctor.rs  format.rs  mod.rs  new_project.rs  test_runner.rs  watch.rs
orion-vm/src/jit/: compiler.rs  mod.rs  runtime.rs  runtime_oop.rs
orion-vm/src/modules/: ai_mod.rs  auth_mod.rs  cache_mod.rs  cola_mod.rs  config_mod.rs  cosmos_mod.rs  crypto2_mod.rs  crypto_mod.rs  csv_mod.rs  datetime_mod.rs  db_mod.rs  docker_mod.rs  embed_mod.rs  env_mod.rs  excel_mod.rs  formato_mod.rs  frame_mod.rs  fs.rs  grafo_mod.rs  gui_mod.rs  insight_mod.rs  json_mod.rs  llm_mod.rs  log_mod.rs  mail_mod.rs  matrix_mod.rs  middleware_mod.rs  mod.rs  net_mod.rs  pdf_mod.rs  process_mod.rs  proto_mod.rs  quantum_mod.rs  random_mod.rs  regex_mod.rs  router_mod.rs  s3_mod.rs  search_mod.rs  secret_mod.rs  serie_mod.rs  (+15 more)
orion-vm/src/modules/gui/: components.rs  mod.rs  runner.rs  state.rs  theme.rs
orion-vm/target_test/debug/.fingerprint/adler2-1a456c7bf2f3b226/: lib-adler2.json
orion-vm/target_test/debug/.fingerprint/ascii-81b1cd556bdaf19d/: lib-ascii  lib-ascii.json
orion-vm/target_test/debug/.fingerprint/cc-f7e5e6775d3bce09/: lib-cc.json
orion-vm/target_test/debug/.fingerprint/cfg-if-59068db8513376d0/: lib-cfg_if  lib-cfg_if.json
orion-vm/target_test/debug/.fingerprint/crc32fast-3a66b7c5758ccca8/: run-build-script-build-script-build.json
orion-vm/target_test/debug/.fingerprint/crc32fast-71a45df3ee6cf5c6/: lib-crc32fast  lib-crc32fast.json
orion-vm/target_test/debug/.fingerprint/displaydoc-8ca2ee73297c7726/: output-lib-displaydoc
orion-vm/target_test/debug/.fingerprint/find-msvc-tools-08707f1fddde7e9d/: lib-find_msvc_tools
orion-vm/target_test/debug/.fingerprint/flate2-e93c39ee06435ede/: lib-flate2.json
orion-vm/target_test/debug/.fingerprint/form_urlencoded-074e5fa8f2333197/: lib-form_urlencoded  lib-form_urlencoded.json
orion-vm/target_test/debug/.fingerprint/getrandom-2c32334adc8dd917/: lib-getrandom.json
orion-vm/target_test/debug/.fingerprint/httpdate-f9ed83d7faacb9c0/: lib-httpdate.json
orion-vm/target_test/debug/.fingerprint/icu_normalizer_data-7d3b0715a22314be/: build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/icu_normalizer_data-a0ad93428c31a62c/: run-build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/litemap-a94b4751b352b24d/: lib-litemap
orion-vm/target_test/debug/.fingerprint/log-3e77e1cb4c78beed/: lib-log
orion-vm/target_test/debug/.fingerprint/memchr-25e193189ac65f13/: lib-memchr.json
orion-vm/target_test/debug/.fingerprint/miniz_oxide-77f969b4e7f8d35d/: lib-miniz_oxide.json
orion-vm/target_test/debug/.fingerprint/once_cell-01a5ec62eb147d5f/: lib-once_cell
orion-vm/target_test/debug/.fingerprint/percent-encoding-99cf5f75b4f99c22/: lib-percent_encoding.json
orion-vm/target_test/debug/.fingerprint/proc-macro2-10a7c9e2c3da988e/: build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/proc-macro2-98fabed31e67323e/: run-build-script-build-script-build.json
orion-vm/target_test/debug/.fingerprint/proc-macro2-b454574685f2d7fd/: lib-proc_macro2.json
orion-vm/target_test/debug/.fingerprint/quote-6fee11d8ab3728e9/: run-build-script-build-script-build.json
orion-vm/target_test/debug/.fingerprint/quote-8b22841bf5ce26c2/: lib-quote.json
orion-vm/target_test/debug/.fingerprint/rustls-257bdd901cbb3148/: build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/rustls-pki-types-a8c68bca0ee9a1da/: lib-rustls_pki_types  lib-rustls_pki_types.json
orion-vm/target_test/debug/.fingerprint/serde-226b1c3826c13038/: build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/serde_core-8e650f168ee0310d/: lib-serde_core
orion-vm/target_test/debug/.fingerprint/serde_derive-18800880f92898bf/: lib-serde_derive.json
orion-vm/target_test/debug/.fingerprint/serde_json-02e4bb3e27940056/: lib-serde_json
orion-vm/target_test/debug/.fingerprint/serde_json-c6c2fe4bb21ee7d6/: build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/serde_json-e967e9ac98177972/: run-build-script-build-script-build
orion-vm/target_test/debug/.fingerprint/shlex-b9805c329debb77b/: lib-shlex  lib-shlex.json
orion-vm/target_test/debug/.fingerprint/simd-adler32-82b2bbc436d61198/: lib-simd_adler32
orion-vm/target_test/debug/.fingerprint/smallvec-0bc754f1667b1370/: lib-smallvec
orion-vm/target_test/debug/.fingerprint/stable_deref_trait-f71679b6167e4e6f/: lib-stable_deref_trait.json
orion-vm/target_test/debug/.fingerprint/subtle-9f8d624f3ecab51e/: lib-subtle.json
orion-vm/target_test/debug/.fingerprint/syn-7f4b14074e4537bc/: lib-syn
orion-vm/target_test/debug/.fingerprint/unicode-ident-c19b7d19e98e00c5/: lib-unicode_ident  lib-unicode_ident.json
orion-vm/target_test/debug/.fingerprint/utf8_iter-9ce41dd9f6284acc/: lib-utf8_iter  lib-utf8_iter.json
orion-vm/target_test/debug/.fingerprint/webpki-roots-7663708aa234f816/: lib-webpki_roots  lib-webpki_roots.json
orion-vm/tests/: output_excel_basic.xlsx  output_excel_bool.xlsx  output_excel_def.xlsx  output_excel_dims.xlsx  output_excel_hoja.xlsx  output_excel_info.xlsx  output_excel_multi.xlsx  output_excel_multi2.xlsx  output_excel_one.xlsx  output_excel_raw.xlsx  output_excel_str.xlsx  regression.rs
(+174 files in other folders)
