[package]
name = "orion-vm"
version = "0.1.0"
edition = "2021"
description = "Orion Language Virtual Machine"

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
chrono = "0.4"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"] }

# ── Cranelift JIT ─────────────────────────────────────────────────────────────
cranelift-codegen  = { version = "0.113", default-features = false, features = ["std"] }
cranelift-frontend = "0.113"
cranelift-jit      = "0.113"
cranelift-module   = "0.113"
cranelift-native   = "0.113"
