[package]
name = "orion-vm"
version = "0.1.0"
edition = "2021"
description = "Orion Language Virtual Machine"

[lib]
name = "orion_vm"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
chrono = "0.4"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"] }

# ── Cranelift JIT ─────────────────────────────────────────────────────────────
cranelift-codegen  = { version = "0.113", default-features = false, features = ["std"] }
cranelift-frontend = "0.113"
cranelift-jit      = "0.113"
cranelift-module   = "0.113"
cranelift-native   = "0.113"
cranelift-object   = "0.113"

# ── FFI dinámico ──────────────────────────────────────────────────────────────
libloading = "0.8"
libffi       = "3"
base64       = "0.21"

# ── GUI nativa (orion-gui) ────────────────────────────────────────────────────
egui   = "0.29"
eframe = "0.29"

# ── Data processing ───────────────────────────────────────────────────────────
csv            = "1"
calamine       = "0.24"
rust_xlsxwriter = "0.74"

# ── Base de datos ─────────────────────────────────────────────────────────────
rusqlite = { version = "0.31", features = ["bundled"] }

# ── Autenticación ─────────────────────────────────────────────────────────────
argon2       = "0.5"
jsonwebtoken = "9"

# ── Correo electrónico ────────────────────────────────────────────────────────
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }

# ── WebSocket ─────────────────────────────────────────────────────────────────
tungstenite = "0.24"

# ── Templates ─────────────────────────────────────────────────────────────────
minijinja = "2"

# ── Tablas formateadas ────────────────────────────────────────────────────────
comfy-table = "7"

# ── Grafos ────────────────────────────────────────────────────────────────────
petgraph = "0.6"

# ── PDF ───────────────────────────────────────────────────────────────────────
lopdf     = "0.32"
printpdf  = "0.6"

# ── Bloque D ──────────────────────────────────────────────────────────────────
toml    = "0.8"                                      # config_mod: parseo TOML
zip     = "2"                                        # zip_mod: crear/extraer .zip
flate2  = "1"                                        # zip_mod: gzip/gunzip
aes-gcm = "0.10"                                     # crypto2_mod: AES-256-GCM
rsa     = { version = "0.9", features = ["pem", "sha2"] }  # crypto2_mod: RSA + PEM + SHA2 OID
